--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@unocss/reset": "^0.30.6",
     "@vueuse/core": "^7.7.1",
     "vue": "^3.2.25",
     "vuedraggable": "^4.1.0"
